--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
-.App {
-  text-align: center;
+.App-header{
+  background-color: var(--primary-color);
+  color: var(--light-color);
+  padding:  10px 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App-nav{
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.App-logo{
+  width: 40px;
 }
+.brand{
+  display: flex;
+  align-items: center;
+  font-size: 22px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
