--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,21 @@
 :root{
   --primary-color:#672280;
   --light-color:#E5E5E5;
+  --linear-gradient:linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
+  --btn-padding-x: 0.75rem;
+  --btn-padding-y: 0.375rem;
+  --btn-font-family: ;
+  --btn-font-size: 1rem;
+  --btn-font-weight: 400;
+  --btn-line-height: 1.5;
+  --btn-color: #212529;
+  --btn-bg: transparent;
+  --btn-border-width: 1px;
+  --btn-border-color: transparent;
+  --btn-border-radius: 0.375rem;
+}
+*, ::after, ::before {
+  box-sizing: border-box;
 }
 body {
   margin: 0;
@@ -11,13 +26,114 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--ligth-color);
+  box-sizing: border-box;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+/* container */
 .container{
   width: 80%;
   margin: 0 auto;
+}
+/* spacing */
+.mt-5{
+  margin-top: calc(1rem * 3) !important;
+}
+/* button */
+.btn {
+  display: inline-block;
+  padding: var(--btn-padding-y) var(--btn-padding-x);
+  font-family: var(--btn-font-family);
+  font-size: var(--btn-font-size);
+  font-weight: var(--btn-font-weight);
+  line-height: var(--btn-line-height);
+  color: var(--btn-color);
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  border: var(--btn-border-width) solid var(--btn-border-color);
+  border-radius: var(--btn-border-radius);
+  background-color: var(--btn-bg);
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.btn:hover{
+  opacity: 0.9;
+}
+.btn-primary {
+  color: var(--light-color);
+  background-color: var(--primary-color);
+  box-shadow: inset 0 3px 5px var(--linear-gradient);
+}
+/* form */
+.form-group{
+  display: block;
+  width: 100%;
+}
+.form-control{
+  display: block;
+  width: 100%;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  border-radius: .375rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+
+}
+.form-control:focus {
+  color: #212529;
+  background-color: #fff;
+  border-color: #86b7fe;
+  outline: 0;
+  box-shadow: 0 0 0 .25rem rgba(13,110,253,.25);
+}
+/* grid */
+.row{
+  display: flex;
+  flex-wrap: wrap;
+}
+.col-12
+{
+  width: 100%;
+  padding: 5px;
+  flex: 0 0 auto;
+}
+
+/* sm screen */
+@media only screen and (min-width:480px) {
+  /* grid */
+  .col-sm-2{
+    width: 16.66666667%;
+    padding: 5px;
+    flex: 0 0 auto;
+  }
+  .col-sm-4{
+    width: 33%;
+    padding: 5px;
+    flex: 0 0 auto;
+  }
+  .col-sm-5{
+    width: 41.66666667%;
+    padding: 5px;
+    flex: 0 0 auto;
+  }
+  .col-sm-6{
+    width: 50%;
+    padding: 5px;
+    flex: 0 0 auto;
+  }
 }
